Fixed a problem that changed the contributing user when editing a contribution
Contribution fix
Removed duplicate publication
Allow upper case file extensions
Changed virtual lab redirection to permanent version
Logging level fix for development
Unhook temporary index page.
Changed PhetUser.password to PhetUser.hashedPassword
Added an error message when sign in credentials are not authenticated
Removed unused constructors and added docs to StringTextField
Added redirection fix for translation utility files
Fixed research links
Added debugging to determine source of phetinfo service errors - missing sim messages
Fixed old links for curve fitting / eating and exercise offline JARs.
Fixed old contribution redirections when done through a request for login
Added a potential solution for incorrect background color for the phet logo
Switched from Label to RawLabel to fix rendering unescaped html in sim page administration